[gd_scene load_steps=3 format=3 uid="uid://c8qvt5qjkuv7q"]

[ext_resource type="Script" path="res://scenes/battle/battle_scene.gd" id="1_yvmqe"]
[ext_resource type="PackedScene" uid="uid://c8qxr6j2yvdgx" path="res://scenes/ui/battle_ui_controller.tscn" id="2_n3m4p"]

[node name="BattleScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yvmqe")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 6

[node name="TopPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2

[node name="RoundLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 200.0
offset_bottom = 15.0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "回合 1"
vertical_alignment = 1

[node name="PhaseLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -15.0
offset_right = 100.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "准备阶段"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -15.0
offset_right = -20.0
offset_bottom = 15.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "剩余时间: 30"
horizontal_alignment = 2
vertical_alignment = 1

[node name="BoardContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = -150.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerBoard" type="GridContainer" parent="BoardContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -300.0
grow_horizontal = 2
grow_vertical = 0
columns = 8

[node name="EnemyBoard" type="GridContainer" parent="BoardContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 300.0
grow_horizontal = 2
columns = 8

[node name="BottomPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0

[node name="BenchContainer" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 10.0
offset_right = -20.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="HBoxContainer" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="StartButton" type="Button" parent="BottomPanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "开始战斗"

[node name="SkipButton" type="Button" parent="BottomPanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "跳过战斗"

[node name="AutoButton" type="Button" parent="BottomPanel/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "自动战斗"

[node name="BattleUIController" parent="." instance=ExtResource("2_n3m4p")]
layout_mode = 1

[connection signal="pressed" from="BottomPanel/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BottomPanel/ButtonContainer/SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="BottomPanel/ButtonContainer/AutoButton" to="." method="_on_auto_button_pressed"]
